# bot_challenge

./: README.md  pyproject.toml  test_websocket.html
app/: db.py  main.py
app/Frontend/: style.css  test_websocket.html  websocket.js
docs/: README.md  api.md  development.md  websocket.md
tests/: conftest.py  debug_test.py  test_chatbot.py  test_db.py  test_error_handling.py  test_helper.py  test_integration.py  test_routes.py  test_websocket.py
